--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id='root'></div>
+  <div>this is a test</div>
   <script src="bundle.js"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
