--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Visualize Data with ___ </title>
+  <title>Visualize Data with a Bar Chart</title>
 </head>
 <body>
-  <div id='root'></div>
-  <div>this is a test</div>
-  <script src="bundle.js"></script>
+  <div id='root'>
+    <div id='title'>United States GDP</div>
+    <div id='graph'></div>
+  </div>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
