--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Visualize Data with a Bar Chart</title>
   <link rel="stylesheet" href="main.css">
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script src="index.js"></script>
 </head>
 <body>
   <div id='root'>
     <div id='title'>United States GDP</div>
     <div id='graph'></div>
   </div>
+
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
